--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@
     position: fixed;
     top: -100%;
     left: 0;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     background: #fff;
@@ -80,11 +81,17 @@
     position: fixed;
     top: 0%;
     right: -100%;
-    width: 70%;
+    width: 85%;
     height: 100%;
     background: #283a2c;
     transition: 1s ease-out;
     z-index: 5654654654;
+}
+.enquery button.btn.btn-light.submit {
+    background: transparent;
+    border-radius: 50px;
+    color: #fff;
+    padding: 10px 20px;
 }
 .enquery.active{
     right: 00%;
@@ -127,7 +134,9 @@
     transform: translate(69px, 29px);
     z-index: -1;
 }
-
+.enquery{
+    font-family: Wlk;
+}
 .current-image {
     z-index: 2;
     background: url(file:///C:/Users/mohammad/Desktop/second/assets/img/alexander-aashiesh-kathmandu-unsplash.jpg);
@@ -135,6 +144,130 @@
 a.display-6.text-dark {
     font-size: 2.4rem;
 }
+
+a.overlay-enquiry__button-contact.button-contact.text-center.text-light {
+    width: 250px;
+    height: 250px;
+    /* border: 1px solid #fff; */
+    display: block;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 7rem;
+    position: relative;
+    text-decoration: none;
+}
+
+a.overlay-enquiry__button-contact.button-contact.text-center.text-light::before {content: "";width: 100%;height: 100%;position: absolute;top: 0;left: 0;border-radius: 50%;border: 2px dashed #ffffff9c;animation: 20s rotate infinite linear reverse;}
+
+svg.button-contact__icon.button-contact__icon--telephone {
+    margin-top: -50px;
+    min-width: 50px !important;
+    min-height: 40px !important;
+}
+
+button.button.button-close.overlay-enquiry__button-close.js-button-close {
+    background: none;
+    color: #fff;
+    border: none;
+    position: absolute;
+    right: 8%;
+    top: 6%;
+}
+
+span.button-close__icon-line.js-icon-line {
+    width: 15px;
+    height: .5px;
+    background: #fff;
+    display: block;
+    position: absolute;
+}
+
+span.button-close__icon-line.js-icon-line {}
+
+.button-close__icon.js-icon {
+    position: absolute;
+    right: -10px;
+    top: 50%;
+    transform: translate(100%, 0%);
+    width: 25px;
+    height: 25px;
+}
+.button-close__icon.js-icon::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -48%;
+    left: -20%;
+    display: block;
+    border-radius: 50%;
+    border: 1px dashed #ffffff9c;
+    animation: 20s rotate infinite linear;
+}
+span.button-close__icon-line.js-icon-line:nth-child(1){
+    transform: rotate(45deg)
+}
+span.button-close__icon-line.js-icon-line:nth-child(2){
+    transform: rotate(-45deg)
+}
+div#enquery {
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+/* enquery form style */
+.row.pt-5.text-light {
+    padding: 100px 60px;
+}
+form.enquery-from input, form.enquery-from textarea {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #fff;
+    border-radius: 0;
+    padding: 10px 0;
+    color: #fff;
+}
+
+
+form.enquery-from .row {
+    margin-top: 40px;
+}
+form.enquery-from .row .col{
+    position: relative;
+}
+form.enquery-from input:focus, form.enquery-from textarea:focus {
+    background: transparent;
+    color: #fff;
+}
+form.enquery-from label, form.enquery-from input::placeholder{
+    color: rgba(255,255,255,0.5);
+}
+form.enquery-from .col label:not(.npa) {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    transition: .3s all;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+
+}
+form.enquery-from label.active{
+    top: -10%;
+}
+@keyframes rotate {
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+
 @font-face {
     font-family: Wlk;
     src: url('../font/wulkan-display-medium.woff2') format('woff2');
