--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,15 @@
     background: rgba(0, 0, 0, 0.357);
 }
 .logo-box .logo{
+    max-width: 100%;
     transition: 1s;
 }
-.logo-box.active .logo{
-    filter: invert(1);
+.logo-box img.logo{
+    width: 80px;
 }
+/* .logo-box.active .logo{
+    filter: invert(1);
+} */
 .menu{
     grid-gap: 20px;
     justify-content: flex-end;
@@ -267,6 +271,101 @@ form.enquery-from label.active{
         transform: rotate(360deg);
     }
 }
+
+.nav-toggle{
+    display: none;
+}
+.nav-toggle{
+    width: 45px;
+    height: 15px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+.nav-toggle .nav-toggle-line{
+    width: 100%;
+    height: 2px;
+    display: block;
+    background: black;
+    border-radius: 10px;
+    transition: 1s all;
+}
+.nav-toggle.active .nav-toggle-line{
+    background: #fff;
+}
+ .nav-toggle.active .nav-toggle-line:nth-child(2) {
+    opacity: 0;
+    visibility: hidden;
+}
+
+ .nav-toggle.active .nav-toggle-line:nth-child(1) {
+    transform: rotate(45deg) translate(0, 9px);
+}
+.nav-toggle.active .nav-toggle-line:nth-child(3) {
+    transform: rotate(-45deg) translate(0, -9px);
+}
+.menu-one .navbar-nav .nav-item .list-group{
+    display: none;
+}
+/* mobile in menu */
+@media screen and (max-width: 1024px) {
+    .nav-toggle{
+        display: flex !important;
+        z-index: 34385 ;
+    }
+    .col-md-2.logo-box {
+        z-index: 32446 !important;
+    }
+    .menus{
+        background: #000;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: -100%;
+        z-index: -1;
+        transition: 1s;
+    }
+    .menus.active{
+        top: 0%;
+    }
+    .menus.active a {
+        color: #fff !important;
+    }
+
+    .menu-one ul {
+        flex-direction: column !important;
+        margin-top: 20%
+    }
+    
+    .menu-one ul li a {
+        font-size: 19px !important;
+    }
+    .menu-two, .menu-item {
+        display: none;
+    }
+   
+    .menu-one li.nav-item a.clicked + .list-group {
+        display: block !important;
+    }
+    
+    li.nav-item {
+        text-align: left;
+        width: 180px;
+    }
+    
+    .menu-one .navbar-nav .nav-item .list-group {
+        text-align: left;
+    }
+    *[class *= menu-].active .nav-link{
+        color: #fff !important;
+    }
+    
+    
+}
+
 
 @font-face {
     font-family: Wlk;
